[gd_scene load_steps=9 format=3 uid="uid://dyv4rxauc7r01"]

[ext_resource type="Script" path="res://scripts/boss_nautilus.gd" id="1_04spg"]
[ext_resource type="Texture2D" uid="uid://lscffd4117cm" path="res://assets/entities/nautilus.png" id="2_3dr3l"]

[sub_resource type="Animation" id="Animation_wdckv"]
resource_name = "boiling"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_pru22"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a0omu"]
_data = {
"RESET": SubResource("Animation_pru22"),
"boiling": SubResource("Animation_wdckv")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_4fayg"]
radius = 70.0643

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0ne6o"]
radius = 44.0
height = 158.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yhmcp"]
radius = 46.0
height = 138.0

[node name="BossNautilus" type="Area2D" groups=["enemy"]]
script = ExtResource("1_04spg")
enemy_type = "Boss"
health = 4000
explosion_scale = 1.0
speed = 150.0
speed_variance = 0.0

[node name="EnemySprite" type="Sprite2D" parent="."]
texture = ExtResource("2_3dr3l")
flip_h = true
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a0omu")
}

[node name="ShellCollision" type="CollisionShape2D" parent="."]
position = Vector2(-48, -2)
shape = SubResource("CircleShape2D_4fayg")

[node name="BodyCollision1" type="CollisionShape2D" parent="."]
position = Vector2(8, 17)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_0ne6o")

[node name="BodyCollision2" type="CollisionShape2D" parent="."]
position = Vector2(-9, 26)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_yhmcp")

[node name="BurstTimer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="RingTimer" type="Timer" parent="."]
wait_time = 3.5

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="BurstTimer" to="." method="_on_burst_timer_timeout"]
[connection signal="timeout" from="RingTimer" to="." method="_on_ring_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
